k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticketing-api-svc
  namespace: ticketing
spec:
  selector:
    app: ticketing-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
